--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			<div class="four columns alpha">
 				<h2>Development</h2> 
 				<ul class="features">				
-					<li class="">The <strong>next version 1.0.3 has been submitted to the app store</strong> with lots of improvements like Photo Hub integration, room for the Media Player and lots more! Check for updates in your Marketplace app soon!</li>
+					<li class="">The <strong>latest version 1.0.3 is in the app store</strong> with lots of improvements like Photo Hub integration, room for the Media Player and lots more! It works great in Windows Phone 7 and Windows Phone 8!</li>
 					<li class="">Want to <strong>write your own application?</strong> Learn <a href="http://www.hanselman.com/blog/FromConceptToCodeIn6HoursShippingMyFirstWindowsPhoneApp.aspx">how I wrote this app on my blog!</a></li>
 				</ul>
 <!--	# Twitter Feed  #		-->	
