adding Windows Phone 8

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 	<meta charset="utf-8">
 <!--	[[1]]	# App title #		-->	
-	<title>Lost Phone Screen - a simple customizable windows phone 7 lock screen</title>
-	<meta name="description" content="Lost Phone Screen - a simple customizable windows phone 7 lock screen">
+	<title>Lost Phone Screen - a simple customizable windows phone 7 or 8 lock screen</title>
+	<meta name="description" content="Lost Phone Screen - a simple customizable windows phone 7 or 8 lock screen">
 	<meta name="author" content="Scott Hanselman">
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -70,7 +70,7 @@
 			
 			<div id="strapline" class="six columns omega offset-by-six">
 <!--	[[5]]	# App strapline #		-->	
-				<p><strong>"Lost Phone Screen"</strong><br/>The Customizable<br/>Windows Phone 7<br/> Lock Screen</p>
+				<p><strong>"Lost Phone Screen"</strong><br/>The Customizable<br/>Windows Phone 7 (or 8!)<br/> Lock Screen</p>
 			</div>
 		</div>
 		<br class="clear"/>
