--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			
 			<div id="strapline" class="six columns omega offset-by-six">
 <!--	[[5]]	# App strapline #		-->	
-				<p><strong>"Lost Phone Screen"</strong><br/>The Customizable<br/>Windows Phone 7 (or 8!)<br/> Lock Screen</p>
+				<p><strong>"Lost Phone Screen"</strong><br/>The Customizable<br/>Windows Phone 7 (and now 8!)<br/> Lock Screen</p>
 			</div>
 		</div>
 		<br class="clear"/>
@@ -79,7 +79,7 @@
 			<div class="four columns alpha">
 				<h2>Development</h2> 
 				<ul class="features">				
-					<li class="">The <strong>latest version 1.0.3 is in the app store</strong> with lots of improvements like Photo Hub integration, room for the Media Player and lots more! It works great in Windows Phone 7 and Windows Phone 8!</li>
+					<li class="">The <strong>latest version has been SUBMITTED to the app store</strong> with lots of improvements like automatic lock screen updating on Windows Phone 8, deep Photo Hub integration, room for the Media Player and lots more! It works great in Windows Phone 7 and Windows Phone 8!</li>
 					<li class="">Want to <strong>write your own application?</strong> Learn <a href="http://www.hanselman.com/blog/FromConceptToCodeIn6HoursShippingMyFirstWindowsPhoneApp.aspx">how I wrote this app on my blog!</a></li>
 				</ul>
 <!--	# Twitter Feed  #		-->	
@@ -115,6 +115,7 @@
 				<ul class="featurelist">				
 					<li class="BulletImage">Exceedingly simple and elegant</li>
 					<li class="BulletImage">Matches your Metro Lock Screen exactly</li>
+                    <li class="BulletImage">Update the lock screen automatically on Windows Phone 8!</li>
 					<li class="BulletImage">Choose your own wallpaper</li>
 					<li class="BulletImage">Photo Hub integration with crop!</li>
 					<li class="BulletImage">Can move out of the way of the Media Player</li>	
