--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			
 			<div id="strapline" class="six columns omega offset-by-six">
 <!--	[[5]]	# App strapline #		-->	
-				<p><strong>"Lost Phone Screen"</strong><br/>The Customizable<br/>Windows Phone 7 (and now 8!)<br/> Lock Screen</p>
+				<p><strong>"Lost Phone Screen"</strong><br/>The Customizable<br/>Windows Phone 7 or 8<br/> Lock Screen</p>
 			</div>
 		</div>
 		<br class="clear"/>
